--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Andr-Den/bic-nodejs#readme",
   "dependencies": {
+    "adm-zip": "^0.5.9",
     "express": "^4.18.2"
   },
   "devDependencies": {
