--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
+    "dev": "nodemon app.js",
     "get-info": "node getInfo.js"
   },
   "repository": {
@@ -24,7 +25,9 @@
     "adm-zip": "^0.5.9",
     "express": "^4.18.2",
     "iconv-lite": "^0.6.3",
-    "node-fetch": "^3.2.10"
+    "node-cron": "^3.0.2",
+    "node-fetch": "^3.2.10",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
